# zimmerman15-hs

./: .gitignore  Main.hs  Readme.md  Tests.hs  find-failure-depth.sh  zimmerman14.cabal  zimmerman15.cabal
Zim14/: Circuit.hs  Element.hs  Encoding.hs  Evaluate.hs  FakeEncoding.hs  FakeMMap.hs  Index.hs  IndexSet.hs  Obfuscate.hs  Serialize.hs  Sym.hs  Util.hs
Zim14/Circuit/: Arbitrary.hs  Parser.hs
Zim14/Encoding/: CLT13.hs  Fake.hs
Zim14/Obfuscate/: Serialize.hs
Zim15/: Encoding.hs  Evaluate.hs  Index.hs  Obfuscate.hs  Serialize.hs  Sym.hs
Zim15/Circuit/: Parser.hs
Zim15/Encoding/: CLT13.hs  Fake.hs
circuits/: add.acirc  b0_16.acirc  b0_2.acirc  b0_32.acirc  b0_4.acirc  b0_64.acirc  b0_8.acirc  sbox0.acirc  sub.acirc
