name:                zimmerman14
version:             0.1.0.0
author:              Brent Carmer
maintainer:          bcarmer@gmail.com
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

executable zimmerman14
    default-language:     Haskell2010
    main-is:              Main.hs
    other-modules:        Zim14.Circuit
                        , Zim14.Circuit.Parser
                        , Zim14.Encoding
                        , Zim14.FakeEncoding
                        , Zim14.Index
                        , Zim14.Obfuscate
                        , Zim14.Serialize
                        , Zim14.Sym
                        , Zim14.Util

    build-depends:        base >=4.8 && <4.9
                        , bytestring
                        , cereal
                        , clt13
                        , containers
                        , deepseq
                        , directory >= 1.2.5
                        , mtl
                        , options
                        , parallel-io
                        , parsec
                        , split

    ghc-options:        -Wall -threaded -O2 -fprof-auto "-with-rtsopts=-N4 -p"
                        -fno-warn-unused-do-bind

test-suite test
    default-language:     Haskell2010
    type:                 exitcode-stdio-1.0
    main-is:              Tests.hs
    build-depends:        base >=4.8 && <4.9
                        , QuickCheck
                        , test-framework
                        , test-framework-quickcheck2
                        , bytestring
                        , cereal
                        , clt13
                        , containers
                        , deepseq
                        , directory >= 1.2.5
                        , mtl
                        , options
                        , parallel-io
                        , parsec
                        , split
