name:                zimmerman14
version:             0.1.0.0
author:              Brent Carmer
maintainer:          bcarmer@gmail.com
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

executable zimmerman14
    default-language:     Haskell2010
    main-is:              Main.hs
    other-modules:        Zim14.Circuit
                        , Zim14.Circuit.Arbitrary
                        , Zim14.Circuit.Parser
                        , Zim14.Evaluate
                        , Zim14.Encoding
                        , Zim14.Encoding.Fake
                        , Zim14.Encoding.CLT13
                        , Zim14.Index
                        , Zim14.Obfuscate
                        , Zim14.Serialize
                        , Zim14.Sym
                        , Zim14.Util

    build-depends:        base >=4.8 && <4.9
                        , bytestring
                        , cereal
                        , clt13
                        , containers
                        , deepseq
                        , IfElse
                        , mtl
                        , options
                        , parallel-io
                        , parsec
                        , QuickCheck
                        , split
                        , stm
                        , unix

    --ghc-options:        -Wall -threaded -O2 -fprof-auto "-with-rtsopts=-N4 -p"
    ghc-options:        -Wall -threaded -O2 "-with-rtsopts=-N4"
                        -fno-warn-unused-do-bind

test-suite test
    default-language:     Haskell2010
    type:                 exitcode-stdio-1.0
    main-is:              Tests.hs
    build-depends:        base >=4.8 && <4.9
                        , QuickCheck
                        , test-framework
                        , test-framework-quickcheck2
                        , bytestring
                        , cereal
                        , clt13
                        , containers
                        , deepseq
                        , mtl
                        , options
                        , parallel-io
                        , parsec
                        , split
                        , unix
